--- a/src/app/teacher/ECR/assessment-type.component.html
+++ b/src/app/teacher/ECR/assessment-type.component.html
@@ -27,7 +27,7 @@
           <!-- <td style="width: 2%" class="text-center">#</td> -->
           <th style="width: 10%">Perfect Score</th>
           <th style="width: 30%">Description</th>
-          <th style="width: 20%">Assesment Created</th>
+          <th style="width: 20%">Date Created</th>
           <th style="width: 10%" class="text-center">Edit Score</th>
           <th style="width: 15%" class="text-center">Actions</th>
           <th style="width: 10%">Delete Score</th>
@@ -179,7 +179,7 @@
             *ngIf="loading"
             class="spinner-border spinner-border-sm mr-1"
           ></span>
-          Add assesment
+          Add
         </button>
 
       </fieldset>
