--- a/src/app/teacher/student-list.component.html
+++ b/src/app/teacher/student-list.component.html
@@ -1,5 +1,19 @@
-<form (ngSubmit)="submitEnrollmentDecisions()" class="py-4">
+<div class="d-flex justify-content-between m-4">
   <h3>Select Students for this Subject</h3>
+
+  <!-- 🔍 Search Input -->
+  <div class="form-group mb-3">
+    <input
+      type="text"
+      class="form-control"
+      placeholder="Search by name..."
+      [(ngModel)]="searchTerm"
+      name="searchTerm"
+    />
+  </div>
+</div>
+
+<form (ngSubmit)="submitEnrollmentDecisions()" class="py-4">
   <table class="table table-hover table-sm">
     <thead>
       <tr>
@@ -11,22 +25,19 @@
             name="selectAll"
           />
         </th>
-        <!-- <th style="width: 10%;">Enrollment Id</th> -->
         <th style="width: 20%">Lastname</th>
         <th style="width: 20%">Firstname</th>
         <th style="width: 5%">Sex</th>
-        <th style="width: 20%">Address</th>
-        <!-- <th style="width: 20%">Name of Guardian</th>
-        <th style="width: 20%">Contact Number</th> -->
       </tr>
     </thead>
     <tbody>
-      <tr *ngIf="!isLoading && students.length === 0">
+      <tr *ngIf="!isLoading && filteredStudents.length === 0">
         <td colspan="7" class="text-center">
-          <h5 class="m-0">No students has been found.</h5>
+          <h5 class="m-0">No students found.</h5>
         </td>
       </tr>
-      <tr *ngFor="let student of students; let i = index">
+
+      <tr *ngFor="let student of filteredStudents; let i = index">
         <td>
           <input
             type="checkbox"
@@ -34,13 +45,9 @@
             name="selected{{ i }}"
           />
         </td>
-        <!-- <td>{{ student.enrollment_id }}</td> -->
         <td>{{ student.lastName }}</td>
         <td>{{ student.firstName }}</td>
         <td>{{ student.sex }}</td>
-        <td>{{ student.address }}</td>
-        <!-- <td>{{ student.guardian_name }}</td>
-        <td>{{ student.guardian_contact }}</td> -->
       </tr>
     </tbody>
   </table>
@@ -49,9 +56,8 @@
     <button type="submit" class="mr-3 btn btn-sm btn-primary">
       Submit Selected
     </button>
-
-    <a class="btn btn-success btn-sm" [routerLink]="['/teacher', id]"
-      >Proceed to Grading</a
-    >
+    <a class="btn btn-success btn-sm" [routerLink]="['/teacher', id]">
+      Proceed to Grading
+    </a>
   </div>
 </form>
