--- a/src/app/teacher/ECR/add-edit-score.component.html
+++ b/src/app/teacher/ECR/add-edit-score.component.html
@@ -58,3 +58,5 @@
     </ng-template>
   </table>
 </form>
+
+<h4 *ngIf="students && students.length > 0" class="text-center">--- Nothing follows ---</h4>
