--- a/src/app/teacher/ECR/percentages.component.html
+++ b/src/app/teacher/ECR/percentages.component.html
@@ -69,9 +69,9 @@
           <h4>Quarterly Assessment: {{ subject.custom_qa_percent }}%</h4>
         </div>
       </div>
-      <div class="text-end mt-3">
+      <!-- <div class="text-end mt-3">
         <button class="btn btn-primary" (click)="startEditing(subject)">✏️ Customize Percentages</button>
-      </div>
+      </div> -->
     </div>
   </ng-template>
 </div>
